command-line-formatter: Refactor to generate the documentation automatically

https://bugzilla.gnome.org/show_bug.cgi?id=794837